fix unaligned table titles

--- a/static/css/TableViewbi.css
+++ b/static/css/TableViewbi.css
@@ -24,3 +24,11 @@ div.outputtable tr:hover {background-color:#f5f5f5;}
 .cardview {
   height: 330px !important;
 }
+
+/*.MuiTableCell-root-132 {
+	padding: 0px !important;
+}*/
+
+.MUIDataTableHeadCell-data-158 {
+	display: table !important;
+}
